k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-postgres
  namespace: opsforge
spec:
  selector:
    app: test-postgres
  ports:
    - port: 5432
