k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-redis
  namespace: opsforge
spec:
  selector:
    app: test-redis
  ports:
    - port: 6379
